docs/7.56/md/abenbdl_field_numbering.md
---
title: "CDS BDL - field numbering"
description: |
  Syntax ... field(numbering:managed) Field1, Field2, ...; Effect Defines managed internal numbering(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_int_numbering_glosry.htm 'Glossary Entry') for a RAP BO field(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_b
version: "7.56"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_field_numbering.htm"
abapFile: "abenbdl_field_numbering.htm"
keywords: ["select", "update", "delete", "do", "if", "try", "data", "abenbdl", "field", "numbering"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds.htm) →  [ABAP CDS - RAP Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_rap_objects.htm) →  [ABAP CDS - RAP Business Objects (RAP BO)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_rap_business_objects.htm) →  [ABAP CDS - Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_bdef.htm) →  [ABAP CDS - BDL for Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl.htm) →  [ABAP CDS - managed and unmanaged behavior definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_rap_bo.htm) →  [CDS BDL - entity behavior definition](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_define_beh.htm) →  [CDS BDL - entity behavior body](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_body.htm) → 

CDS BDL - field numbering

Syntax

... field(numbering:managed) Field1, Field2, ...;

Effect

Defines managed [internal numbering](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_int_numbering_glosry.htm "Glossary Entry") for a [RAP BO field](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_field_glosry.htm "Glossary Entry"). The field in question is automatically assigned values upon creation of a new entity instance. The RAP BO consumer doesn't have to provide any input for those fields.

-   Can be applied only to primary key fields with ABAP type raw(16) (UUID).
-   Managed internal numbering is only available in [managed RAP BOs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenmanaged_rap_bo_glosry.htm "Glossary Entry").
-   It is managed by the [RAP framework](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_framework_glosry.htm "Glossary Entry"), no implementation in the ABAP behavior pool is required.
-   The field in question can also be defined as readonly to ensure that no values are passed from the RAP BO consumer. However, this is optional. If you do not set the key field to readonly, the key value can also be given by the consumer.

Hint

For self-defined numbering, the keyword early numbering is available, see topic [CDS BDL - early numbering](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_early_numb.htm).

Further Information

Development guide for the ABAP RESTful Application Programming Model, section Automatically Drawing Primary Key Values in Managed BOs.

Example

The following example shows a managed BDEF that defines internal numbering for the key field key\_field.

managed;
define behavior for DEMO\_RAP\_FIELD\_CHARACTERISTICS alias RootEntity
persistent table demo\_dbtab\_field
lock master
{
  create;
  update;
  delete;
  field ( numbering:managed, readonly ) key\_field;
}

The ABAP program DEMO\_RAP\_MANAGED\_FIELDS uses [EML](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_glosry.htm "Glossary Entry") to access to [RAP business object](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_glosry.htm "Glossary Entry") and performs the following steps:

-   It creates three entity instances by specifying a value for the field char\_field1.
-   It commits the three new entity instances to the database.
-   Using the ABAP SQL SELECT statement, it displays the content of the underlying database table. It can be seen that the primary key field KEY\_FIELD of each entity instance contains a value, which was generated by means of managed early numbering.

Code Snippet:

DELETE FROM demo\_dbtab\_field.
    MODIFY ENTITIES OF DEMO\_RAP\_FIELD\_CHARACTERISTICS
         ENTITY RootEntity
           CREATE
             SET FIELDS WITH VALUE #(
              ( %cid = '1' char\_field1 = 'A'  )
              ( %cid = '2' char\_field1 = 'B'  )
              ( %cid = '3' char\_field1 = 'C'  ) )
                MAPPED DATA(mapped)
               FAILED DATA(failed)
               REPORTED DATA(reported).
    COMMIT ENTITIES.

Result: values for the primary key field are generated automatically.

![Figure](bdoc_internal_numb.png)